--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
             from pyodide import create_proxy
 
             def rapidImg(self):
-                print("You have chosen to Select a RAPID image weight.")
+                # Initialize detector
+                detector = Detector(model_name='rapid',
+                                    weights_path='./weights/pL1_MWHB1024_Mar11_4000.ckpt',
+                                    use_cuda=False)
+            
+                read_img = easygui.fileopenbox(filetypes=["*.jpg","*.jpeg","*.png"])
             
             rapid_proxy = create_proxy(rapidImg)
 
