Detector import added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <py-script>
             from js import document
             from pyodide import create_proxy
+            from api import Detector
 
             def rapidImg(self):
                 # Initialize detector
