easygui and cv2 imports

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             from js import document
             from pyodide import create_proxy
             from api import Detector
+            import cv2
+            import easygui
 
             def rapidImg(self):
                 # Initialize detector
