--- a/index.html
+++ b/index.html
@@ -29,8 +29,24 @@
 
         <!-- Select RAPID weight Image Button -->
         <button type="button" id="rapid">RAPID</button>
-        <py-script src="./example.py">
+        <py-script>
+            from js import document
+            from pyodide import create_proxy
+            from api import Detector
+            import cv2
+            import easygui
+
+            def rapidImg(self):
+                # Initialize detector
+                detector = Detector(model_name='rapid',
+                                    weights_path='./weights/pL1_MWHB1024_Mar11_4000.ckpt',
+                                    use_cuda=False)
             
+                read_img = easygui.fileopenbox(filetypes=["*.jpg","*.jpeg","*.png"])
+            
+            rapid_proxy = create_proxy(rapidImg)
+
+            document.getElementById("rapid").addEventListener("click", rapid_proxy)
         </py-script>
 
         <!-- Select RAPID-FA weight Image Button -->
