--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </py-script>
 
         <!-- Select RAPID-FA weight Image Button -->
-        <button type="button" id="rapidFA">RAPID-FA</button>
+        <button type="button" id="rapidFA" pys-onClick="rapid">RAPID-FA</button>
         <py-script>
             from js import document
             from pyodide import create_proxy
