--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <!-- Select RAPID weight Image Button -->
         <button type="button" id="rapid">RAPID</button>
 
-        <py-script src="example.py">
-   
+        <py-script src="./example.py">
+            from api import Detector
         </py-script>
 
 
