Added path api.py

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <py-env>
         - paths:
             - ./example.py
+            - ./api.py
     </py-env>
     <title>Fisheye Algorithm</title> 
 </head>
