api.py added in pyscript

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             from api import Detector
         </py-script> -->
 
-        <py-script>
+        <py-script src="./api.py">
             from api import Detector
 
             detector = Detector(model_name='rapid',
