added tqdm and torch

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <py-env>
         - matplotlib
         - numpy
+        - tqdm
+        - torch
         - paths:
             - ./example.py
             - ./api.py
